@@ -5,6 +5,7 @@ version 0.70.02
 	Setting auto iso range (commandline only)
 	Added new jpeg images modes
 	Reading drive mode (K-x only)
+	Reading bracket ev (K-x only)
 
 version 0.70.01 ( 2011-01-19 )
 	File format support for commandline interface (--file_format)
